cloud/w10/lab/gatekeeper/constraints/host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: host-network
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["*"]
      kinds: ["Pod"]
  parameters:
    hostNetwork: false
