cloud/w10/lab/gatekeeper/constraints/latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: latest-tag
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    excludedNamespaces:
    - external-secrets
    - argocd
    - cosign-system
    - gatekeeper-system
    - kube-system
  parameters:
    tags: ["latest"]
