cloud/w10/lab/gatekeeper/constraints/owner-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: owner-label
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
    excludedNamespaces:        # ← thêm phần này
    - external-secrets
    - cosign-system
    - gatekeeper-system
    - argocd
    - kube-system
    - argo-rollouts
    - monitoring
  parameters:
    labels: ["owner"]
