cloud/w10/lab/gatekeeper/constraints/resources-limit.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: resources-limits
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["*"]
      kinds: ["Pod"]
    excludedNamespaces:
    - external-secrets
    - cosign-system
    - gatekeeper-system
    - argocd
    - kube-system
    - monitoring 
  parameters:
    cpu: "2"
    memory: "4Gi"
