cloud/w10/lab/gatekeeper/constraints/run-as-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: run-as-user
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["*"]
      kinds: ["Pod"]
    excludedNamespaces:
    - external-secrets
    - cosign-system
    - gatekeeper-system
    - argocd
    - kube-system
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
